
add_executable(test_warmup test_warmup.cu)
target_link_libraries(test_warmup PUBLIC voxhash)

# add_executable(test_vector test_vector.cu)
# target_link_libraries(test_vector PUBLIC voxhash)

# add_executable(test_block test_block.cu)
# target_link_libraries(test_block PUBLIC voxhash)

# add_executable(test_tsdf_block_voxels test_tsdf_block_voxels.cu)
# target_link_libraries(test_tsdf_block_voxels PUBLIC voxhash)

# add_executable(test_semantic_block_voxels test_semantic_block_voxels.cu)
# target_link_libraries(test_semantic_block_voxels PUBLIC voxhash)

# add_executable(test_pool test_pool.cu)
# target_link_libraries(test_pool PUBLIC voxhash)

# add_executable(test_hash test_hash.cu)
# target_link_libraries(test_hash PUBLIC voxhash)

# add_executable(test_layer test_layer.cu)
# target_link_libraries(test_layer PUBLIC voxhash)

# add_executable(test_indexing test_indexing.cu)
# target_link_libraries(test_indexing PUBLIC voxhash)

# add_executable(test_voxel_layer test_voxel_layer.cu)
# target_link_libraries(test_voxel_layer PUBLIC voxhash)
